propertee-core/src/test/resources/tests/29_error_loop_limit.expected
Runtime error: Runtime Error at line 3:0: Loop exceeded maximum iterations (1000). Use 'loop condition infinite do' if you need unlimited iterations.
