propertee-core/src/test/resources/tests/29_error_loop_limit.tee
// Test: Loop without 'infinite' should error after max iterations (1000)
i = 0
loop true do
    i = i + 1
end
